--- a/src/Argon/GameBundle/Resources/views/Character/edit.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/edit.html.twig
@@ -9,9 +9,17 @@
     {{ form_errors(form) }}
     {{ form_row(form.story, {'attr': {'placeholder': 'character.story_placeholder'|trans}}) }}
     {% if character.storyConfirmedAt is null %}
-        <div class="alert alert-info">{{ 'character.story_not_confirmed'|trans }}</div>
+        <div class="alert alert-warning">{{ 'character.story_not_confirmed'|trans }}</div>
     {% else %}
-        <div class="alert alert-info">{{ 'character.story_confirmed'|trans }}</div>
+        <div class="alert alert-success">{{ 'character.story_confirmed'|trans }}</div>
+        {% if character.note %}
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h3 class="panel-title">{{ 'character.note'|trans }}</h3>
+                </div>
+                <div class="panel-body">{{ character.note|nl2br }}</div>
+            </div>
+        {% endif %}
     {% endif %}
     {{ form_rest(form) }}
 {{ form_end(form) }}
