--- a/app/Resources/less/argonbook.less
+++ b/app/Resources/less/argonbook.less
@@ -4,6 +4,14 @@
 .ability-dex .glyphicon-asterisk { color: #FFFF33; }
 .ability-wis .glyphicon-asterisk { color: #00CCFF; }
 
+.character-info.affix {
+  .border-top-radius(0);
+  border-top-style: none;
+  top: 0;
+  width: inherit;
+  z-index: 1030;
+}
+
 .article {
   position: relative;
   padding: 15px;
