[WIP] Big Redesign

--- a/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
@@ -1,8 +1,17 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password" role="form">
-  {{ form_widget(form) }}
-  <div>
-    <button type="submit" class="btn btn-primary">{{ 'change_password.submit'|trans }}</button>
+<div class="jumbotron jumbotron-title">
+  <div class="container">
+    <h1>{{ 'change_password.title'|trans }}</h1>
   </div>
-</form>
+</div>
+
+<div class="container">
+  <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password" role="form">
+    {{ form_rest(form) }}
+    <div>
+      <button type="submit" class="btn btn-primary">{{ 'change_password.submit'|trans }}</button>
+      <a href="{{ path('fos_user_profile_show') }}" class="btn btn-link">{{ 'change_password.cancel'|trans }}</a>
+    </div>
+  </form>
+</div>
