--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,5 +1,5 @@
-{% extends '::layout.html.twig' %}
+{% extends '::layout/basic.html.twig' %}
 
-{% block content %}
-    {% block fos_user_content %}{% endblock %}
+{% block wrapper %}
+  {% block fos_user_content %}{% endblock %}
 {% endblock %}
