--- a/app/Resources/less/variables.less
+++ b/app/Resources/less/variables.less
@@ -1,9 +1,23 @@
-/*!
- * Argonbook
- */
-
 // Import the original one and overide only the desire ones.
 @import "../../../vendor/twbs/bootstrap/less/variables.less";
 
-// ArgonBook
-@import "argonbook.less";
+
+//== Colors
+//
+
+@brand-primary:         #1FBED6;
+@brand-success:         #97C30A;
+@brand-info:            #5bc0de;
+@brand-warning:         #f0ad4e;
+@brand-danger:          #FF717E;
+
+@brand-news:                     #FFFFA8;
+@brand-jumbotron:                #BEF202;
+
+//== Section
+//
+//##
+
+@section-padding:                15px;
+@section-bg:                     @gray-lighter;
+@section-font-size:              ceil((@font-size-base * 1.5));
