--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,63 +1,38 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "FOSUserBundle::layout_cover.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
-{% block stylesheets %}
-{{ parent() }}
-<style type="text/css">
-.form-signin {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
-}
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
-}
-.form-signin .checkbox {
-  font-weight: normal;
-}
-.form-signin .form-control {
-  position: relative;
-  font-size: 16px;
-  height: auto;
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-</style>
-{% endblock %}
+{% block title %}{{ parent() }} - {{ 'layout.login'|trans }}{% endblock %}
 
 {% block fos_user_content %}
-<form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin" role="form">
-  <h2 class="form-signin-heading">{{ 'security.login.title'|trans }}</h2>
-  {% if error %}
-    <div class="alert alert-danger">{{ error|trans }}</div>
-  {% endif %}
+  <div class="panel panel-default">
+    <form action="{{ path("fos_user_security_check") }}" method="post" class="fos_user_security_login" role="form">
+      <div class="panel-heading">
+        <h2 class="panel-title">{{ 'security.login.title'|trans }}</h2>
+      </div>
 
-  <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+      <div class="panel-body">
+        {% if error %}
+          <div class="alert alert-danger">{{ error|trans }}</div>
+        {% endif %}
 
-  <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'security.login.username'|trans }}" required="required" class="form-control">
-  <input type="password" id="password" name="_password" placeholder="{{ 'security.login.password'|trans }}" required="required" class="form-control">
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-  <label class="checkbox">
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on">{{ 'security.login.remember_me'|trans }}
-  </label>
+        <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'security.login.username'|trans }}" required="required" class="form-control">
+        <input type="password" id="password" name="_password" placeholder="{{ 'security.login.password'|trans }}" required="required" class="form-control">
 
-  <button type="submit" id="_submit" name="_submit" class="btn btn-lg btn-primary btn-block">{{ 'security.login.submit'|trans }}</button>
-</form>
+        <label class="checkbox">
+          <input type="checkbox" id="remember_me" name="_remember_me" value="on">{{ 'security.login.remember_me'|trans }}
+        </label>
+
+        <button type="submit" id="_submit" name="_submit" class="btn btn-lg btn-primary btn-block">{{ 'security.login.submit'|trans }}</button>
+      </div>
+    </form>
+  </div>
+  <div class="panel panel-default">
+    <div class="list-group">
+      <a href="{{ path("fos_user_registration_register") }}" class="list-group-item">{{ 'layout.register'|trans }}</a>
+      <a href="{{ path("fos_user_resetting_request") }}" class="list-group-item">{{ 'layout.reset_password'|trans }}</a>
+    </div>
+  </div>
 {% endblock fos_user_content %}
