--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -3,61 +3,26 @@
 {% block title 'ArgonBook' %}
 
 {% block stylesheets %}
-{% spaceless %}
-{% stylesheets 'css/bootstrap.css' 'css/jqueryui.css' filter='?yui_css' %}
+  {% stylesheets 'css/bootstrap.css' 'css/argonbook.css' 'css/jqueryui.css' filter='?yui_css' %}
     <link href="{{ asset_url }}" rel="stylesheet" type="text/css" media="screen" />
-{% endstylesheets %}
+  {% endstylesheets %}
   {% include 'BraincraftedBootstrapBundle::ie8-support.html.twig' %}
-{% endspaceless %}
-
 {% endblock %}
 
 {% block body %}
-  <div class="container">
-    {#
-    <div class="locale_switcher">
-      {{ locale_switcher() }}
-    </div>
-     #}
-    <div class="page-header">
-      <ul class="nav nav-pills pull-right">
-        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-            {% if is_granted('ROLE_USER') %}
-              <li><a href="{{ path('fos_user_profile_show') }}">{{ 'layout.profile'|trans({}, 'web') }}</a></li>
-            {% endif %}
-            {% if is_granted("ROLE_ADMIN") %}
-              <li><a href="{{ path('admin_dashboard') }}">{{ 'layout.admin'|trans({}, 'web') }}</a></li>
-            {% endif %}
-            {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
-              <li><a href="{{ path('homepage', {'_switch': '_exit'}) }}">{{ 'layout.switch_exit'|trans({}, 'web') }}</a></li>
-            {% else %}
-              <li><a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
-            {% endif %}
-        {% else %}
-          <li><a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a></li>
-        {% endif %}
-      </ul>
-      <h3 class="text-muted"><a href="{{ path('homepage') }}">{{ 'ArgonBook' }}</a>
-        <small>{{ 'Alternate Reality Games Oriented Network' }}</small>
-      </h3>
-    </div>
-
-    {% for flashClass, flashMessages in app.session.flashbag %}
-      {% for flashMessage in flashMessages %}
-        <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'web') }}</div>
-      {% endfor %}
+  {% for flashClass, flashMessages in app.session.flashbag %}
+    {% for flashMessage in flashMessages %}
+      <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans }}</div>
     {% endfor %}
+  {% endfor %}
 
-    {% block wrapper %}
-        {% block content %}{% endblock %}
-    {% endblock %}
-  </div>
+  {% block wrapper %}
+    {% block content %}{% endblock %}
+  {% endblock %}
 {% endblock %}
 
 {% block javascripts %}
-{% spaceless %}
-{% javascripts 'js/jquery.js' 'js/jqueryui.js' 'js/bootstrap.js' filter='?closure' %}
+  {% javascripts 'js/jquery.js' 'js/jqueryui.js' 'js/bootstrap.js' filter='?closure' %}
     <script src="{{ asset_url }}"></script>
-{% endjavascripts %}
-{% endspaceless %}
+  {% endjavascripts %}
 {% endblock %}
