--- a/src/Argon/GameBundle/Resources/views/Character/new.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/new.html.twig
@@ -1,9 +1,17 @@
 {% set active = 'character' %}
-{% extends 'ArgonWebBundle::layout.html.twig' %}
+{% extends '::layout/twocolumns.html.twig' %}
 {% form_theme form 'ArgonGameBundle:Form:fields.html.twig' %}
 {% trans_default_domain 'web' %}
 
 {% block title %}{{ parent() }} - {{ 'character.new'|trans }} - {{ game.name }}{% endblock %}
+
+{% block sections %}
+  <div class="section section-characters">
+    <div class="container">
+      <h1>{{ 'character.new'|trans }}</h1>
+    </div>
+  </div>
+{% endblock %}
 
 {% block content %}
 {{ form(form) }}
