--- a/src/Argon/NewsBundle/Resources/views/Block/latest.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Block/latest.html.twig
@@ -1,12 +1,16 @@
 {% if entities|length %}
-  <h2>{{ 'news.posts'|trans({}, 'web') }}
-  {#
-    <small class="pull-right">
-      <a href="#" class="btn btn-default">{{ 'news.view_all_posts'|trans({}, 'web') }}</a>
-    </small>
-  #}
-  </h2>
+  <div class="section section-news">
+    <div class="container">
+      <h2>{{ 'news.posts'|trans({}, 'web') }}
+      {#
+        <small class="pull-right">
+          <a href="#" class="btn btn-default">{{ 'news.view_all_posts'|trans({}, 'web') }}</a>
+        </small>
+      #}
+      </h2>
+    </div>
+  </div>
   {% for post in entities %}
-    {{ render(controller('ArgonNewsBundle:Block:post', {'post': post})) }}
+    {{ render(controller('ArgonNewsBundle:Block:post', {'post': post, 'position': loop.index})) }}
   {% endfor %}
 {% endif %}
