--- a/src/Argon/NewsBundle/Resources/views/Block/post.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Block/post.html.twig
@@ -1,9 +1,11 @@
-<div class="article">
-  <h3>{{ post.title }}</h3>
-  <div class="content">
-    {{ post.body|nl2br }}
-  </div>
-  <div class="footer">
-    {{ 'news.post.footer'|trans({'%creator%': post.creator, '%published%': post.publishedAt|date}, 'web') }}
+<div class="section section-article{% if position is defined %} section-article-{{ position }}{% endif %}">
+  <div class="container">
+    <h3>{{ post.title }}</h3>
+    <div class="content">
+      {{ post.body|nl2br }}
+    </div>
+    <div class="footer">
+      {{ 'news.post.footer'|trans({'%creator%': post.creator, '%published%': post.publishedAt|date}, 'web') }}
+    </div>
   </div>
 </div>
