Design for Control Panel

--- a/app/Resources/less/argonbook.less
+++ b/app/Resources/less/argonbook.less
@@ -128,11 +128,6 @@ html, body {
   padding: @section-padding;
   background-color: @section-bg;
 
-  p {
-    font-size: @section-font-size;
-    font-weight: 200;
-  }
-
   .container {
     max-width: 100%;
   }
@@ -146,4 +141,8 @@ html, body {
       padding-right: (@section-padding * 2);
     }
   }
+}
+
+.section-empty {
+  background-color: @body-bg;
 }
