--- a/app/Resources/views/layout/basic.html.twig
+++ b/app/Resources/views/layout/basic.html.twig
@@ -37,6 +37,7 @@
   {% endfor %}
 
   {% block wrapper %}
+    {% block sections %}{% endblock %}
     {% block content %}{% endblock %}
   {% endblock %}
 {% endblock %}
