--- a/app/Resources/views/layout/twocolumns.html.twig
+++ b/app/Resources/views/layout/twocolumns.html.twig
@@ -2,13 +2,15 @@
 
 {% block wrapper %}
   {% block sections %}{% endblock %}
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-9">
-        {% block content %}{% endblock %}
-      </div>
-      <div class="col-xs-12 col-sm-3">
-        {% include('ArgonWebBundle::Partial/sidebar.html.twig') %}
+  <div class="section section-empty">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-9">
+          {% block content %}{% endblock %}
+        </div>
+        <div class="col-xs-12 col-sm-3">
+          {% include('ArgonWebBundle::Partial/sidebar.html.twig') %}
+        </div>
       </div>
     </div>
   </div>
