--- a/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
@@ -1,24 +1,1 @@
-{% extends "::layout.html.twig" %}
-{% trans_default_domain 'admin' %}
-
-{% block wrapper %}
-<div class="row">
-  <div class="col-xs-12 col-sm-3">
-    <div class="list-group">
-      <a href="{{ path('admin_dashboard') }}" class="list-group-item{{ active == 'dashboard' ? ' active' : '' }}">{{ 'sidebar.dashboard'|trans }}</a>
-      <a href="{{ path('admin_player') }}" class="list-group-item{{ active == 'player' ? ' active' : '' }}">{{ 'sidebar.player'|trans }}</a>
-    </div>
-    <div class="list-group">
-      <a href="{{ path('admin_news') }}" class="list-group-item{{ active == 'news' ? ' active' : '' }}">{{ 'sidebar.news'|trans }}</a>
-    </div>
-    <div class="list-group">
-      <a href="{{ path('admin_character') }}" class="list-group-item{{ active == 'character' ? ' active' : '' }}">{{ 'sidebar.character'|trans }}</a>
-      <a href="{{ path('admin_race') }}" class="list-group-item{{ active == 'race' ? ' active' : '' }}">{{ 'sidebar.race'|trans }}</a>
-      <a href="{{ path('admin_skill') }}" class="list-group-item{{ active == 'skill' ? ' active' : '' }}">{{ 'sidebar.skill'|trans }}</a>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-9">
-    {% block content %}{% endblock %}
-  </div>
-</div>
-{% endblock %}
+{% extends "::layout/admin.html.twig" %}
