--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block javascripts %}
-  {% javascripts 'js/jquery.js' 'js/jqueryui.js' 'js/bootstrap.js' filter='?closure' %}
+  {% javascripts 'js/jquery.js' 'js/jquery-ui.js' 'js/bootstrap.js' filter='?closure' %}
     <script src="{{ asset_url }}"></script>
   {% endjavascripts %}
 {% endblock %}
