jQueryUI with dash

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -3,7 +3,7 @@
 {% block title 'ArgonBook' %}
 
 {% block stylesheets %}
-  {% stylesheets 'css/bootstrap.css' 'css/argonbook.css' 'css/jqueryui.css' filter='?yui_css' %}
+  {% stylesheets 'css/bootstrap.css' 'css/argonbook.css' 'css/jquery-ui.css' filter='?yui_css' %}
     <link href="{{ asset_url }}" rel="stylesheet" type="text/css" media="screen" />
   {% endstylesheets %}
   {% include 'BraincraftedBootstrapBundle::ie8-support.html.twig' %}
