--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -13,7 +13,7 @@
 
       <div class="panel-body">
         {% if error %}
-          <div class="alert alert-danger">{{ error|trans }}</div>
+          <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
 
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
