Fix CSS in Login Page

--- a/app/Resources/less/argonbook.less
+++ b/app/Resources/less/argonbook.less
@@ -112,6 +112,7 @@ html, body {
 }
 .fos_user_security_login .checkbox {
   margin-bottom: 10px;
+  margin-left: 25px;
   font-weight: normal;
 }
 .fos_user_security_login .list-group {
