--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
 {% block body %}
   {% for flashClass, flashMessages in app.session.flashbag %}
     {% for flashMessage in flashMessages %}
-      <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans }}</div>
+      <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
     {% endfor %}
   {% endfor %}
 
