--- a/app/Resources/views/layout/basic.html.twig
+++ b/app/Resources/views/layout/basic.html.twig
@@ -32,7 +32,7 @@
 
   {% for flashClass, flashMessages in app.session.flashbag %}
     {% for flashMessage in flashMessages %}
-      <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans }}</div>
+      <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
     {% endfor %}
   {% endfor %}
 
