--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-  {% for flashClass, flashMessages in app.session.flashbag %}
+  {% for flashClass, flashMessages in app.session.flashbag.all() %}
     {% for flashMessage in flashMessages %}
       <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
     {% endfor %}
