--- a/app/Resources/views/layout/cover.html.twig
+++ b/app/Resources/views/layout/cover.html.twig
@@ -1,7 +1,7 @@
 {% extends "::layout.html.twig" %}
 
 {% block body %}
-  {% for flashClass, flashMessages in app.session.flashbag %}
+  {% for flashClass, flashMessages in app.session.flashbag.all() %}
     {% for flashMessage in flashMessages %}
       <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
     {% endfor %}
