--- a/app/Resources/less/variables.less
+++ b/app/Resources/less/variables.less
@@ -18,5 +18,5 @@
 //
 //##
 
-@section-padding:                15px;
+@section-space:                  15px;
 @section-bg:                     @gray-lighter;
