--- a/src/Argon/WebBundle/Resources/less/argonbook.less
+++ b/src/Argon/WebBundle/Resources/less/argonbook.less
@@ -4,7 +4,7 @@
 
 .section-homepage {
   background-color: @brand-jumbotron;
-  padding: (@section-padding * 2);
+  margin: (@section-space * 2);
   h1 {
     font-size: 400%;
   }
