Wrap alert in Section

--- a/app/Resources/less/argonbook.less
+++ b/app/Resources/less/argonbook.less
@@ -12,6 +12,15 @@ html, body {
 }
 
 //
+// Alert
+// --------------------------------------------------
+
+.alert {
+  margin-bottom: 0;
+}
+
+
+//
 // Cover
 // --------------------------------------------------
 
