--- a/app/Resources/views/layout/admin.html.twig
+++ b/app/Resources/views/layout/admin.html.twig
@@ -13,11 +13,17 @@
     </div>
   </div>
 
-  {% for flashClass, flashMessages in app.session.flashbag.all() %}
-    {% for flashMessage in flashMessages %}
-      <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
+  {% if app.session.flashbag.keys()|length %}
+  <div class="section section-empty">
+    <div class="container">
+    {% for flashClass, flashMessages in app.session.flashbag.all() %}
+      {% for flashMessage in flashMessages %}
+        <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
+      {% endfor %}
     {% endfor %}
-  {% endfor %}
+    </div>
+  </div>
+  {% endif %}
 
   {% block wrapper %}
     {% block sections %}{% endblock %}
