--- a/app/Resources/views/layout/cover.html.twig
+++ b/app/Resources/views/layout/cover.html.twig
@@ -1,11 +1,17 @@
 {% extends "::layout.html.twig" %}
 
 {% block body %}
-  {% for flashClass, flashMessages in app.session.flashbag.all() %}
-    {% for flashMessage in flashMessages %}
-      <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
+  {% if app.session.flashbag.keys()|length %}
+  <div class="section section-empty">
+    <div class="container">
+    {% for flashClass, flashMessages in app.session.flashbag.all() %}
+      {% for flashMessage in flashMessages %}
+        <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
+      {% endfor %}
     {% endfor %}
-  {% endfor %}
+    </div>
+  </div>
+  {% endif %}
 
   {% block wrapper %}
     <div class="wrapper">
