--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -5,7 +5,7 @@
 {% block title %}{{ parent() }} - {{ 'layout.login'|trans }}{% endblock %}
 
 {% block fos_user_content %}
-  <div class="panel panel-default">
+  <div class="panel panel-default panel-login">
     <form action="{{ path("fos_user_security_check") }}" method="post" class="fos_user_security_login" role="form">
       <div class="panel-heading">
         <h2 class="panel-title">{{ 'security.login.title'|trans }}</h2>
@@ -36,3 +36,15 @@
     </div>
   </div>
 {% endblock fos_user_content %}
+
+{% block javascripts %}
+  {{ parent() }}
+  <script type="text/javascript">
+    function shake(e, p, t) { e.css('left', p.shift() + 'px');
+      if (p.length > 0) { setTimeout(function() { shake(e, p, t); }, t); }
+    }
+    jQuery(function($) { var p, e = $('.panel-login'), r = e.find('.alert').length > 0;
+      if (r) { shake(e.css('position', 'relative'), (p = [15, 30, 15, 0, -15, -30, -15, 0]).concat(p.concat(p)), 20); }
+    });
+  </script>
+{% endblock %}
