--- a/app/Resources/views/layout/cover.html.twig
+++ b/app/Resources/views/layout/cover.html.twig
@@ -1,4 +1,8 @@
 {% extends "::layout.html.twig" %}
+{% trans_default_domain 'web' %}
+
+{# This layout is the base of the standalone screen like the login page.
+   It doesn't have the header nor the sidebar and the content is centered. #}
 
 {% block body %}
   {% if app.session.flashbag.keys()|length %}
@@ -18,7 +22,7 @@
       <div class="wrapper-inner">
         <div class="container">
           <ul class="pager">
-            <li class="previous"><a href="{{ path('homepage') }}">&larr; {{ 'layout.go_back'|trans({}, 'ArgonWebBundle') }}</a></li>
+            <li class="previous"><a href="{{ path('homepage') }}" title="{{ 'layout.are_you_lost'|trans }}">&larr; {{ 'layout.go_back'|trans }}</a></li>
           </ul>
           {% block sections %}{% endblock %}
           {% block content %}{% endblock %}
