--- a/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
@@ -1,5 +1,5 @@
 {% extends '::layout/basic.html.twig' %}
-{% trans_default_domain 'ArgonWebBundle' %}
+{% trans_default_domain 'web' %}
 
 {% block title %}{{ parent() }} - {{ 'homepage.title'|trans }}{% endblock %}
 
